# Lockjaw

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  linker.ld  microkernel-plan.md  rust-toolchain.toml
.cargo/: config.toml
build-support/: hash.rs
docs/: README.md  agentic-alignment-vs-human-conditioning.md  ai-native-hardening-pass.md  ai-native-hardening-punch-list.md  ben_principles.md  cacheable-dma-migration-plan.md  codex-kernel-architecture-work-items.md  development-journal-11.md  development-journal-4.md  development-journal-5.md  development-journal-6.md  development-journal-9.md  emmc2-block-storage-plan.md  extraction-roadmap.md  handle-revocation-plan.md  ipc.md  kernel-vmem-roadmap.md  linker-symbol-audit.md  m6-subcommit-2-plan.md  memory-model.md  object-model.md  paired-review-workflow.md  partition-manager-plan.md  posix-musl-plan.md  posix-phase0-plan.md  posix-phase2-mmap-plan.md  relink-notes.md  reviewer-mode-codex.md  smp-plan.md  stack-budget.md  syscalls.md  tech-debt.md  typed-mmio-feedback-597db1f-claude.md  typed-mmio-substrate-phases-1-8.md  types-extraction-plan.md  yagni-parking-lot.md
docs/architecture/: 01-architecture.md  03-non-virtualizable-hardware.md  04-driver-substrate.md  no-kernel-alloc.md
docs/architecture/patterns/: README.md  operation-envelope.md  (+3 more)
docs/archive/: README.md  fix2-ttbr0-always-write.patch
docs/book-of-lockjaw/: 01-architecture.md  02-handle-identity-tokens.md  04-driver-substrate.md
docs/history/: README.md  ai-native-hardening-pass.md  ai-native-hardening-punch-list.md  cacheable-dma-migration-plan.md  codex_lockjaw_feedback_apr_17_2026.txt  core-fmt-audit.md  emmc2-block-storage-plan.md  handle-revocation-plan.md  m6-subcommit-2-plan.md  partition-manager-plan.md  posix-phase0-plan.md  posix-phase2-mmap-plan.md  post-c1-fix-plan.md  smp-plan.md  typed-mmio-feedback-597db1f-claude.md  typed-mmio-feedback-597db1f.md  typed-mmio-substrate-phases-1-8.md
docs/journals/: README.md  development-journal-10.md  development-journal-2.md  development-journal-3.md  development-journal-7.md  development-journal-8.md  development-journal.md
docs/patterns/: README.md  plan-apply.md  pure-data-structures.md  pure-state-machines.md
docs/plans/: lockjaw-m-plan.md  posix-musl-plan.md
docs/process/: ben_principles.md  paired-review-workflow.md  reviewer-mode.md
docs/reference/: boot-sequence.md  clock-subsystem.md  device-manager-protocol.md  driver-howto.md  exception-handling.md  fat32-server.md  higher-half-kernel.md  ipc.md  kernel-drivers.md  linker-symbol-audit.md  memory-model.md  musl-port.md  object-model.md  partition-manager.md  process-creation.md  regspec-format.md  scheduler.md  smp.md  syscalls.md  threads.md  wirespec-format.md
docs/references/: README.md
docs/tracking/: ben_todos.md  extraction-roadmap.md  kernel-vmem-roadmap.md  tech-debt.md  yagni-parking-lot.md
lockjaw-types/: Cargo.toml
lockjaw-types/src/: addr.rs  block.rs  buddy.rs  cache.rs  clock_handle_table.rs  constants.rs  device.rs  display.rs  dma.rs  dma_coherence.rs  dma_pool.rs  dtb_layout.rs  elf.rs  elf_loader.rs  exception.rs  fat32.rs  fdt.rs  fs.rs  fwcfg.rs  handle.rs  handle_ops.rs  ipc_state.rs  ipc_state_reply.rs  ipc_token.rs  kvm.rs  lib.rs  notification_state.rs  object.rs  page_table.rs  pageset_header_pool.rs  pageset_table.rs  partition.rs  posix.rs  posix_fd.rs  process.rs  rights.rs  scheduler.rs  sdhci.rs  syscall.rs  thread.rs  (+6 more)
lockjaw-types/test-data/: qemu-virt.dtb
musl-lockjaw/: build.sh
musl-lockjaw/patches/: crt_arch.h  syscall_arch.h
musl-lockjaw/src/: shim.c
src/: crash.rs  elf.rs  main.rs  percpu.rs  print.rs  process.rs
src/cap/: dma_pool.rs  handle_table.rs  mod.rs  object.rs  object_ops.rs  pageset.rs  pageset_header_pool.rs  pageset_table.rs  process_obj.rs  revoke.rs  rights.rs
src/ipc/: endpoint.rs  ep_queue.rs  mod.rs  notification.rs  reply.rs
src/mm/: addr.rs  frame.rs  kernel_ptr.rs  kvm.rs  mod.rs  page_alloc.rs  page_table.rs  stack.rs  user_access.rs
src/sched/: context.rs  current.rs  gkl.rs  mod.rs  scheduler.rs  tcb.rs
src/syscall/: handler.rs
tests/: qemu_integration.sh
user/clock-test/: Cargo.toml  build.rs  linker.ld
user/cprman-driver/: Cargo.toml  linker.ld
user/cprman-driver/src/: main.rs
user/device-manager/: Cargo.toml  linker.ld
user/display-test/: Cargo.toml  linker.ld
user/emmc2-driver/: Cargo.toml  linker.ld
user/emmc2-driver/src/: main.rs
user/fat32-server/: Cargo.toml  linker.ld
user/fat32-test/: Cargo.toml  linker.ld
user/hello/: Cargo.toml  linker.ld
user/init/: Cargo.toml  linker.ld
user/lockjaw-mmio/: Cargo.toml
user/lockjaw-mmio/src/: barrier.rs  cell.rs  dma.rs  lib.rs  mock.rs  recorder.rs  region.rs
user/lockjaw-regs/: Cargo.toml
user/lockjaw-regs/src/: cprman.rs  fw_cfg.rs  lib.rs  pl011.rs  sdhci.rs  virtio_mmio.rs
user/lockjaw-regs/tests/: sdhci_irq_mandatory.rs
user/lockjaw-userlib/: Cargo.toml
user/lockjaw-userlib/src/: block.rs  clock.rs  cprman.rs  devmgr.rs  display.rs  dma.rs  dma_sync.rs  dma_transfer.rs  driver_runtime.rs  fs.rs  fwcfg.rs  handle.rs  irq.rs  lib.rs  pl011.rs  print.rs  process.rs  sdhci.rs  syscall.rs  time.rs  virtio.rs  virtio_blk.rs  virtqueue.rs  virtual_memory.rs
user/neon-canary/: Cargo.toml  linker.ld
user/partition-manager/: Cargo.toml  linker.ld
user/pl011-driver/: Cargo.toml  linker.ld
user/posix-hello/: build-standalone.sh  hello.c  linker.ld  standalone.c
user/posix-server/: Cargo.toml  linker.ld
user/ramfb-driver/: Cargo.toml  linker.ld
user/ramfb-driver/src/: main.rs
user/regspecs/: cprman.toml  fwcfg.toml  pl011.toml  sdhci.toml  virtio-mmio.toml
user/sleep-test/: Cargo.toml  linker.ld
user/uart-driver/: Cargo.toml  linker.ld
user/uart-driver/src/: main.rs
user/virtio-blk-driver/: Cargo.toml  linker.ld
user/virtio-blk-driver/src/: main.rs
user/wirespecs/: fwcfg.toml  sdhci.toml  virtio.toml
xtask/: Cargo.toml  stack-annotations.toml
xtask/src/: check_driver_unsafe.rs  gen_regs.rs  gen_wires.rs  main.rs
(+38 files in other folders)
