[package]
name = "lockjaw-cprman-driver"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
lockjaw-userlib = { path = "../lockjaw-userlib" }
lockjaw-types = { path = "../../lockjaw-types" }
lockjaw-mmio = { path = "../lockjaw-mmio" }
# Note: lockjaw-regs is NOT a dependency — drivers reach the
# generated CPRMAN register surface only through
# lockjaw_userlib::cprman's curated re-export. The xtask
# check-driver-unsafe regime forbids naming `lockjaw_regs`
# anywhere in `user/*-driver` source (the (lockjaw_regs, cprman)
# entry in BANNED_DRIVER_MODULE_PATHS).

[profile.release]
panic = "abort"
opt-level = 2
