[package]
name = "lockjaw-emmc2-driver"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
lockjaw-userlib = { path = "../lockjaw-userlib" }
lockjaw-types = { path = "../../lockjaw-types" }
lockjaw-mmio = { path = "../lockjaw-mmio" }
lockjaw-regs = { path = "../lockjaw-regs" }

[profile.release]
panic = "abort"
opt-level = 2
