[package]
name = "lockjaw-mmio"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]

[dependencies]
lockjaw-types = { path = "../../lockjaw-types" }

[features]
# Host-only test substrate: MockMmioRegion uses `alloc`. Off by default
# so production driver builds (no_std) don't pull alloc in.
mock = []

[dev-dependencies]
static_assertions = "1.1"

[profile.release]
panic = "abort"
opt-level = 2
