[package]
name = "lockjaw-ramfb-driver"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
lockjaw-userlib = { path = "../lockjaw-userlib" }
# Generated typed register layer for fw_cfg. Replaces hand-rolled
# FWCFG_DATA / FWCFG_SEL / FWCFG_DMA offsets and BE conversion.
lockjaw-regs = { path = "../lockjaw-regs" }
# Direct lockjaw-mmio dep for MappedRegs in the engine field.
lockjaw-mmio = { path = "../lockjaw-mmio" }
# Direct lockjaw-types dep for the fwcfg DTOs (FwCfgDmaAccess,
# RamfbConfig, FwCfgFile). Same pattern as virtio-blk-driver
# (lockjaw_types::virtio for virtio DTOs).
lockjaw-types = { path = "../../lockjaw-types" }

[profile.release]
panic = "abort"
opt-level = 2
