[package]
name = "lockjaw-uart-driver"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
lockjaw-userlib = { path = "../lockjaw-userlib" }
# Direct lockjaw-mmio dep for `MappedRegs<Pl011>` in the UartEngine
# field. lockjaw-userlib re-exports plenty but not MappedRegs (which
# is substrate, not userlib); explicit is cleaner.
lockjaw-mmio = { path = "../lockjaw-mmio" }
# Note: lockjaw-regs is NOT a dependency — drivers reach the
# generated PL011 register surface only through
# lockjaw_userlib::pl011's curated re-export. The xtask
# check-driver-unsafe regime forbids naming `lockjaw_regs`
# anywhere in `user/*-driver` source (the (lockjaw_regs, pl011)
# entry in BANNED_DRIVER_MODULE_PATHS).

[profile.release]
panic = "abort"
opt-level = 2
