[package]
name = "lockjaw-virtio-blk-driver"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
lockjaw-userlib = { path = "../lockjaw-userlib" }
lockjaw-types = { path = "../../lockjaw-types" }
lockjaw-mmio = { path = "../lockjaw-mmio" }
# Note: lockjaw-regs is NOT a dependency — virtio-blk-driver
# consumes virtio types only through lockjaw_userlib::virtio*
# re-exports. The xtask check-driver-unsafe regime forbids naming
# `lockjaw_regs` anywhere in `user/*-driver` source (the
# (lockjaw_regs, virtio_mmio) entry in BANNED_DRIVER_MODULE_PATHS).

[profile.release]
panic = "abort"
opt-level = 2
